--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "mongoose": "^5.10.0",
     "netlify-cli": "^2.59.1",
     "netlify-lambda": "^2.0.1",
     "react": "^16.13.1",
