--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  Command = "yarn build"
-  functions = "./api"
-  Publish = "public"
+  command = "yarn build"
+  functions = "api/"
+  publish = "build"
