singup works on the backend, have to implement frontend functionality

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "serverless-http": "^2.5.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "wouter": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
