--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "bootstrap": "^4.5.2",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
+    "multer-gridfs-storage": "^4.2.0",
     "netlify-cli": "^2.59.1",
     "netlify-lambda": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
