--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.2",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "global": "^4.4.0",
-    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.0",
@@ -22,10 +22,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "3.4.3",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "serverless-http": "^2.5.0",
     "uuid": "^8.3.0",
