--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.10.0",
     "netlify-cli": "^2.59.1",
     "netlify-lambda": "^2.0.1",
